--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
-<title>W3.CSS Template</title>
+<title>Happy Birthday Ja</title>
 <meta charset="UTF-8">
+<link rel="icon" href="icon.png">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
@@ -21,14 +22,11 @@
 
 .font_article {
   font-family: ThaiSansLite;
-    font-size: 4.2vmin;
+    font-size: 4.4vmin;
     /*font-size: 22px;*/
 }
 body,h1,h2{font-family: "Raleway", sans-serif}
-.fontx{
-	font-family: "Raleway";
-    font-size: 60px;
-}
+
 body, html {height: 100%}
 p {line-height: 2}
 .bgimg, .bgimg2 {
@@ -49,37 +47,28 @@ p {line-height: 2}
   </div>
 
 
-<!-- Navbar (sticky bottom) -->
-<!-- <div class="w3-bottom w3-hide-small">
-  <div class="w3-bar w3-white w3-center w3-padding w3-opacity-min w3-hover-opacity-off">
-    <a href="#home" style="width:25%" class="w3-bar-item w3-button">Home</a>
-    <a href="#us" style="width:25%" class="w3-bar-item w3-button">Jane & John</a>
-    <a href="#wedding" style="width:25%" class="w3-bar-item w3-button">Wedding</a>
-    <a href="#rsvp" style="width:25%" class="w3-bar-item w3-button w3-hover-black">RSVP</a>
-  </div>
-</div> -->
-
 <!-- About / Jane And John -->
 <div class="w3-container w3-padding-32 w3-pale-red" id="us">
   <div class="w3-content">
     <h1 class="w3-center w3-text-grey font_article" style="font-size:50px;"><b>สิ่งที่อยากจะบอก</b></h1>
-    <p class="font_article w3-text-grey" style="text-indent: 2.5em;">อย่างแรกเลยก็ สุขสันต์วันเกิดนะคร้าบ ปีนี้ก็คงเป็นปีที่หนักหน่วงพอสมควร 555+ แต่ก็อยากให้เธอผ่านมันไปให้ได้นะ ไม่อยากให้เครียดเกินไป แต่ก็คงทำได้ยากแหละนะ 55 ก็ขออวยพรให้เธอผ่านพ้นวิชา<b>สัมมนา</b>ที่รัก ไปได้อย่างราบรื่น ความพยายามมันคงต้องเห็นผลบ้างแหละนะ แล้วก็ขอให้มีความสุขมากๆ ถึงแม้ช่วงนี้จะยังไม่มี แต่หลังจากนี้ก็ขอให้มีความสุขมากๆ และมีเรื่อยๆ คิดโน่นคิดนี่ก็อย่าไปคิดเยอะ จะได้ไม่ปวดหัวจนอ้วกอีก เป็นห่วงนะออเจ้า ส่วนเรื่องเงินๆทองๆก็ไม่คงไม่ต้องขอให้มันมีมากขึ้น ขอแค่ไม่ให้มันมีน้อยลงก็คงเพียงพอ 555 สุขภาพก็ดูแลตัวให้มากๆนะ เป็นเด็กดีของพ่อแม่ ไม่ดื้อไม่ซน ไม่ขี้เกียจ ไม่โดดเรียนบ่อยๆนะ แย่มากเลยแบบนี้ ไม่ดีๆ -..- ก็มีเท่านี้แหละ ไม่รู้จะเขียนอะไรและ 555</p><br>
-    <p class="font_article w3-text-grey" align="right" style="font-size:20px;">ปล.คือก็ไม่เคยคิดจะทำอะไรแบบนี้หรอกนะ แต่แบบให้ของเฉยๆมันก็จะธรรมดาไป เราอยากจะยูนีคอ่านะ เดี๋ยวมันซ้ำ มันไม่เท่ 5555</p>
+    <p class="font_article w3-text-grey" style="text-indent: 2.5em;">อย่างแรกเลยก็ สุขสันต์วันเกิดนะคร้าบ ปีนี้ก็คงเป็นปีที่หนักหน่วงพอสมควร 555+ แต่ก็อยากให้เธอผ่านมันไปให้ได้นะ ไม่อยากให้เครียดเกินไป แต่ก็คงทำได้ยากแหละนะ 55 ก็ขออวยพรให้เธอผ่านพ้นวิชา<b>สัมมนา</b>ที่รัก ไปได้อย่างราบรื่น ความพยายามมันคงต้องเห็นผลบ้างแหละนะ แล้วก็ขอให้มีความสุขมากๆ ถึงแม้ช่วงนี้จะยังไม่มี แต่หลังจากนี้ก็ขอให้มีความสุขมากๆ และมีเรื่อยๆ คิดโน่นคิดนี่ก็อย่าไปคิดเยอะ จะได้ไม่ปวดหัวจนอ้วกอีก เป็นห่วงนะออเจ้า ส่วนเรื่องเงินๆทองๆก็ไม่คงไม่ต้องขอให้มันมีมากขึ้น ขอแค่ไม่ให้มันมีน้อยลงก็คงเพียงพอ 555 สุขภาพก็ดูแลตัวให้มากๆนะ เป็นเด็กดีของพ่อแม่ ไม่ดื้อไม่ซน ไม่ขี้เกียจ ไม่โดดเรียนบ่อยๆนะ แย่มากเลยแบบนี้ ไม่ดีๆ -..- แล้วสุดท้ายนี้ก็อยากบอกว่า ชอบที่เธอยิ้มนะ ยิ้มเยอะๆ ยิ้มบ่อยๆ อย่ามัวแต่เศร้า ไม่สวยนะฮะ ยิ้มเข้าไว้ แล้วทุกอย่างมันจะดีเอง</p><br>
+    <p align="right" class="font_article w3-text-grey">จาก คนกากคนนึง</p>
+    
   </div>
   <div class="polaroids w3-center w3-opacity-min">
   <ul>
     <li>
-      <a class = "font_article" title="ยิ้มเอียงๆ" style="font-size: 20px;">
+      <a class = "font_article" title="Just">
       <img alt="" src="6.jpg">
       </a><span class="pin"></span>
     </li>
     <li>
-      <a class = "font_article" title="ยิ้มอ่อนๆ" style="font-size: 20px;">
+      <a class = "font_article" title="Keep">
       <img alt="" src="7.jpg">
       </a><span class="pin"></span>
     </li>
     <li>
-      <a class = "font_article" title="ยิ้มมากๆ" style="font-size: 20px;">
+      <a class = "font_article" title="Smiling">
       <img alt="" src="8.jpg">
       </a><span class="pin"></span>
     </li>
@@ -90,64 +79,13 @@ p {line-height: 2}
 <!-- Background photo -->
 <div class="w3-display-container bgimg2 w3-opacity">
   <div class="w3-display-bottommiddle w3-text-black w3-center">
-    <h1 class=" w3-jumbo w3-padding-middle w3-opacity w3-white"><span class="w3-hide-small">JUST KEEP </span>SMILE</h1><br>
-  </div>
-</div>
-
-<!-- Wedding information -->
-<!-- div class="w3-container w3-padding-64 w3-pale-red w3-grayscale-min w3-center" id="wedding">
-  <div class="w3-content">
-    <h1 class="w3-text-grey"><b>THE WEDDING</b></h1>
-    <img class="w3-round-large w3-grayscale-min" src="/w3images/wedding_location.jpg" style="width:100%;margin:64px 0">
-    <div class="w3-row">
-      <div class="w3-half">
-        <h2>When</h2>
-        <p>Wedding Ceremony - 2:00pm</p>
-        <p>Reception & Dinner - 5:00pm</p>
-      </div>
-      <div class="w3-half">
-        <h2>Where</h2>
-        <p>Some place, an address</p>
-        <p>Some where, some address</p>
-      </div>
-    </div>
-  </div>
-</div> -->
-
-<!-- RSVP section -->
-<!-- <div class="w3-container w3-padding-64 w3-pale-red w3-center w3-wide" id="rsvp">
-  <h1>HOPE YOU CAN MAKE IT!</h1>
-  <p class="w3-large">Kindly Respond By January, 2017</p>
-  <p class="w3-xlarge">
-    <button onclick="document.getElementById('id01').style.display='block'" class="w3-button w3-round w3-red w3-opacity w3-hover-opacity-off" style="padding:8px 60px">RSVP</button>
-  </p>
-</div> -->
-
-<!-- RSVP modal -->
-<!-- <div id="id01" class="w3-modal">
-  <div class="w3-modal-content w3-card-4 w3-animate-zoom" style="padding:32px;max-width:600px">
-    <div class="w3-container w3-white w3-center">
-      <h1 class="w3-wide">CAN YOU COME?</h1>
-      <p>We really hope you can make it.</p>
-      <form>
-        <input class="w3-input w3-border" type="text" placeholder="Name(s)" name="name">
-      </form>
-      <p><i>Sincerely, John & Jane</i></p>
-      <div class="w3-row">
-        <div class="w3-half">
-          <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-green">Going</button>
-        </div>
-        <div class="w3-half">
-          <button onclick="document.getElementById('id01').style.display='none'" type="button" class="w3-button w3-block w3-red">Can't come</button>
-        </div>
-      </div>
-    </div>
+    <h1 class=" w3-jumbo w3-padding-middle w3-opacity w3-white"><span class="w3-hide-small">JUST KEEP SMILING</span><span class="w3-hide-large">SMILE</span></h1><br>
   </div>
 </div>
 
 <!-- Footer -->
 <footer class="w3-center w3-opacity w3-padding-8">
-  <p>Made by <a href="https://facebook.com/peerawit.wandech" title="เอ๊ะใครกัน?" target="_blank" class="w3-hover-text-green">Peerawit Wandech</a></p>
+  <p>Made by <a href="https://facebook.com/peerawit.wandech" title="เอ๊ะใครกัน?" target="_blank" class="w3-hover-text-green font_article" style="font-size: 22px;">คนกาก</a></p>
 </footer>
 
 
