--- a/index.html
+++ b/index.html
@@ -79,6 +79,31 @@
     width: 410px;
   }
 }
+@media only screen and (max-width:655px) {
+  /* For tablets: */
+  .font_header{
+    font-size: 48px;
+  }
+  .font_content{
+    font-family: ThaiSansLite;
+    font-size: 22px;
+  }
+  .hbd{
+    font-family:Raleway;
+    font-size: 35px;
+    font-weight: bold;
+  }
+  .date{
+    font-family:Raleway;
+    font-size: 30px;
+    font-weight: bold;
+  }
+  .smile{
+    font-family:Raleway;
+    font-size: 42px;
+    width: 410px;
+  }
+}
 @media only screen and (max-width:500px) {
   /* For mobile phones: */
   .font_header{
